JumpScript/tests/baselines/reference/objectTypeWithDuplicateNumericProperty.errors.txt
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(6,5): error TS2300: Duplicate identifier '1.0'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(7,5): error TS2300: Duplicate identifier '1.'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(8,5): error TS2300: Duplicate identifier '1.00'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(12,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(13,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(14,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(15,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(19,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(20,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(21,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(22,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(27,5): error TS2300: Duplicate identifier '1.0'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(28,5): error TS2300: Duplicate identifier '1.'.
tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump(29,5): error TS2300: Duplicate identifier '1.00'.


==== tests/cases/conformance/types/members/objectTypeWithDuplicateNumericProperty.jump (14 errors) ====
    // numeric properties must be distinct after a ToNumber operation
    // so the below are all errors
    
    class C {
        1;
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1.'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1.00'.
    }
    
    interface I {
        1;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var a: {
        1;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        1: 1,
        1.0: 1,
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        1.: 1,
        ~~
!!! error TS2300: Duplicate identifier '1.'.
        1.00: 1
        ~~~~
!!! error TS2300: Duplicate identifier '1.00'.
    }
    
    